# tracing-viewer

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: log_parser.rs  main.rs  ui.rs
