[package]
name = "tracing-viewer"
version = "1.1.0"
edition = "2024"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
regex = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
anyhow = "1.0"
arboard = { version = "3.4", features = ["wayland-data-control"] }
notify = "6.0"
log = "0.4.27"
env_logger = "0.11.8"
